fix: h2 margin overflow

--- a/web/styles/fragments/faq-category.css
+++ b/web/styles/fragments/faq-category.css
@@ -9,7 +9,6 @@ div.faq--category {
 
 div.faq--category > h2 {
   font-size: 1.5rem;
-  margin: 0 -4rem;
   font-weight: 500;
   text-transform: uppercase;
   display: flex;
@@ -22,7 +21,7 @@ div.faq--category > h2 {
   background: linear-gradient(to right, var(--page-background) 0%, rgba(255, 255, 255, 0) 100%);
   color: var(--color-primary);
   line-height: 1;
-  color: var(--color-primary)
+  color: var(--color-primary);
 }
 
 @media (max-width: 600px) and (orientation: portrait) {
