--- a/web/styles/fragments/help.css
+++ b/web/styles/fragments/help.css
@@ -65,41 +65,3 @@ div.help section.head-section>div.help--sections {
     grid-template-columns: 1fr
   }
 }
-
-div.help section#warranty {
-  gap: 0;
-  isolation: isolate
-}
-
-div.help section#warranty:before {
-  content: "";
-  z-index: -1;
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: .4;
-  background: linear-gradient(135deg, rgba(0, 0, 0, .8) 0%, rgba(0, 0, 0, .65) 75%, var(--color-primary) 100%)
-}
-
-div.help section#warranty>div {
-  padding: 4rem;
-  background: rgba(255, 255, 255, .85);
-  border-radius: var(--border-radius);
-  box-shadow: var(--block-shadow);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  max-width: var(--_max-width);
-  background: rgba(33, 33, 33, .85);
-  color: #fff
-}
-
-@media (max-width: 600px) and (orientation: portrait) {
-  div.help section#warranty>div {
-    margin: -4rem -1.5rem;
-    padding: 3rem 1.5rem;
-    border-radius: 0
-  }
-}
